--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+.MainCard{
+    display: grid;
+    grid-template-columns: repeat(5,1fr) ;
+    grid-template-rows: repeat(2,1fr);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Card1{
+grid-column: 1/3;
+ 
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Card2{
+    grid-column: 3/-1;
+}
+.Card3{
+    grid-column: 1/3;
+}
+.Card4{
+    grid-column: 3/-1;
+}
+.search-container {
+    display: flex;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .search-container input[type="text"] {
+    flex: 1;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .search-container button[type="submit"] {
+    padding: 5px 10px;
+    border: none;
+    background: #555;
+    color: #fff;
+    border-radius: 0 5px 5px 0;
   }
-}
+  .search-container img {
+    width: 10px;
+    height: 10px;
+  }
